--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "express": "^4.17.1",
     "knex": "^0.19.0",
     "knex-cleaner": "^1.2.1",
+    "run": "^1.4.0",
+    "server": "^1.0.19",
     "sqlite3": "^4.0.9"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
   }
 }
- 
